--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div>
       <input type="text"></input>
-      <canvas></canvas>
+      <canvas id="raster"></canvas>
     </div>
     <div id="voronoi"></div>
   </body>
