Typed characters are now mapped to their respective position in voronoi diagram. Flaw: very slow

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <canvas id="raster"></canvas>
     </div>
     <div id="voronoi"></div>
+    <div>Number of characters: <span id="numchars">unknown</div>
   </body>
 </html>
