--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="lib/normalize.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="site.css"/>
     <script src="lib/jquery-2.1.1.min.js"></script>
-    <script src="lib/d3.js"></script>
-<!--    <script src="lib/d3.v3.min.js"></script> -->
+    <script src="lib/d3.v3.min.js"></script>
+    <script src="voronoi.js"></script>
     <script src="site.js"></script>
   </head>
   <body>
