--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Newtonian Letters</title>
+    <title>Voronoi Headings</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" type="text/css" media="screen" href="site.css"/>
@@ -10,6 +10,7 @@
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/d3.v3.min.js"></script>
+<!--    <script src="d3.js"></script> -->
     <script src="js/foundation.min.js"></script>
     <script src="voronoi.js"></script>
     <script src="site.js"></script>
