Removed Mixbit from the heading, as the project is now evolving.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="site.js"></script>
   </head>
   <body style="text-align: center">
-    <h1 class="subheader">Voronoi-MixBit Headings</h1>
+    <h1 class="subheader">Voronoi Headings</h1>
     <div class="input"><input type="text" id="headingtext" placeholder="Type your heading …"></input></div>
     <div><canvas id="raster"></canvas></div>
     <div id="voronoi"></div>
